🚧 Improved compiler API, fiaco startup